--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,18 +7,20 @@ jobs:
     name: Build my project ✨
     runs-on: ubuntu-latest
     steps:
-      # Checkout
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          lfs: true
-          
-      - uses: game-ci/unity-test-runner@v2
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-        with:
-#           projectPath: /
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
+#       # Checkout
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+#         with:
+#           lfs: true
+      - name: Unity - Request Activation File
+        uses: game-ci/unity-request-activation-file@v1.2
+
+#       - uses: game-ci/unity-test-runner@v2
+#         env:
+#           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+#         with:
+# #           projectPath: /
+#           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
 
 #       # Cache
