--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,55 +1,41 @@
-name: Actions 😎
+name: Test project
 
 on: [push, pull_request]
 
 jobs:
-  build:
-    name: Build my project ✨
+  testAllModes:
+    name: Test in ${{ matrix.testMode }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        projectPath:
+          - test-project
+        testMode:
+          - playmode
+          - editmode
     steps:
-#       # Checkout
-#       - name: Checkout repository
-#         uses: actions/checkout@v2
-#         with:
-#           lfs: true
-      - name: Unity - Request Activation File
-        uses: game-ci/unity-request-activation-file@v1.2
-
-#       - uses: game-ci/unity-test-runner@v2
-#         env:
-#           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-#         with:
-# #           projectPath: /
-#           githubToken: ${{ secrets.GITHUB_TOKEN }}
-
-
-#       # Cache
-#       - uses: actions/cache@v2
-#         with:
-#           path: Library
-#           key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-#           restore-keys: |
-#             Library-
-#       # Test
-#       - name: Run tests
-#         uses: game-ci/unity-test-runner@v2
-#         env:
-#           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-#         with:
-#           githubToken: ${{ secrets.GITHUB_TOKEN }}
-
-#       # Build
-#       - name: Build project
-#         uses: game-ci/unity-builder@v2
-#         env:
-#           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-#           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-#           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-#         with:
-#           targetPlatform: WebGL
-
-#       # Output
-#       - uses: actions/upload-artifact@v2
-#         with:
-#           name: Build
-#           path: build
+      - uses: actions/checkout@v2
+        with:
+          lfs: true
+      - uses: actions/cache@v2
+        with:
+          path: ${{ matrix.projectPath }}/Library
+          key: Library-${{ matrix.projectPath }}
+          restore-keys: |
+            Library-
+      - uses: game-ci/unity-test-runner@v2
+        id: tests
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        with:
+          projectPath: ${{ matrix.projectPath }}
+          testMode: ${{ matrix.testMode }}
+          artifactsPath: ${{ matrix.testMode }}-artifacts
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          checkName: ${{ matrix.testMode }} Test Results
+      - uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: Test results for ${{ matrix.testMode }}
+          path: ${{ steps.tests.outputs.artifactsPath }}
